force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Used to accept bookings data from Poseidon</description>
    <!-- <externalSharingModel>ControlledByParent</externalSharingModel> -->
    <label>Booking</label>
    <nameField>
        <label>Booking Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>