force-app/main/default/objects/Booking__c/fields/Attainedlevel__c.field-meta.xml
<CustomField>
    <fullName>Attainedlevel__c</fullName>
    <description>This field is used to update the Attain level after booking</description>
    <label>Attained level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>