force-app/main/default/objects/Booking__c/fields/BalanceDue__c.field-meta.xml
<CustomField>
    <fullName>BalanceDue__c</fullName>
    <description>This shows the balance payment to be made by the customer</description>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>