force-app/main/default/objects/Booking__c/fields/BookingDate__c.field-meta.xml
<CustomField>
    <fullName>BookingDate__c</fullName>
    <description>Used to display the date when booking is created</description>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>