force-app/main/default/objects/Booking__c/fields/BookingLineInfo__c.field-meta.xml
<CustomField>
    <fullName>BookingLineInfo__c</fullName>
    <description>Used to display the concatenated info about all booking lines</description>
    <label>Booking Line Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>