force-app/main/default/objects/Booking__c/fields/BookingStatsYear__c.field-meta.xml
<CustomField>
    <fullName>BookingStatsYear__c</fullName>
    <description>Used to display the statistical year of the booking</description>
    <label>Booking Stats Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>