force-app/main/default/objects/Booking__c/fields/BrochureSeason__c.field-meta.xml
<CustomField>
    <fullName>BrochureSeason__c</fullName>
    <description>Used to display the Brochure Season to which  booking belongs</description>
    <label>Brochure Season</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>