force-app/main/default/objects/Booking__c/fields/BrochureYear__c.field-meta.xml
<CustomField>
    <fullName>BrochureYear__c</fullName>
    <description>Used to display the Brochure year to which booking belongs</description>
    <label>Brochure Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>