force-app/main/default/objects/Booking__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <description>Used to display the date when booking is cancelled.</description>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>