force-app/main/default/objects/Booking__c/fields/Integrationstatus__c.field-meta.xml
<CustomField>
    <fullName>Integrationstatus__c</fullName>
    <description>Used to Track the record status</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_status</valueSetName>
    </valueSet>
</CustomField>