force-app/main/default/objects/Booking__c/fields/IsByConversion__c.field-meta.xml
<CustomField>
     <fullName>IsByConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this booking created as part of migration, false otherwise</description>
        <label>Is By Conversion</label>
        <type>Checkbox</type>
</CustomField>