force-app/main/default/objects/Booking__c/fields/MainSalesResponsible__c.field-meta.xml
<CustomField>
    <fullName>MainSalesResponsible__c</fullName>
    <description>Used to display the name of the person creating the booking</description>
    <label>Main Sales Responsible</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>