force-app/main/default/objects/Booking__c/fields/MaxEndDate__c.field-meta.xml
<CustomField>
    <fullName>MaxEndDate__c</fullName>
    <description>Used to display the  maximum end date of all active courses in the booking</description>
    <label>Max End Date</label>
    <type>Date</type>
</CustomField>