force-app/main/default/objects/Booking__c/fields/MinStartDate__c.field-meta.xml
<CustomField>
    <fullName>MinStartDate__c</fullName>
    <description>Used to display the  minimum start date of all active courses in the booking</description>
    <label>Min Start Date</label>
    <type>Date</type>
</CustomField>