force-app/main/default/objects/Booking__c/fields/OverAllSatisfied__c.field-meta.xml
<CustomField>
    <fullName>OverAllSatisfied__c</fullName>
    <description>This field is used to check the feedback of the customer after booking</description>
    <label>Over All Satisfied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>