force-app/main/default/objects/Booking__c/fields/PosCustomerId__c.field-meta.xml
<CustomField>
    <fullName>PosCustomerId__c</fullName>
    <description>This field used to display the customer Id of the customer in Poseidon.</description>
    <label>Poseidon Customer Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>