force-app/main/default/objects/Booking__c/fields/PreApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>PreApplicationDate__c</fullName>
    <description>Used to display the date when Pre-application is created.</description>
    <label>Pre-Application Date</label>
    <type>Date</type>
</CustomField>