force-app/main/default/objects/Booking__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Used to display the product of the booking</description>
    <label>Product</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>