force-app/main/default/objects/Booking__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Used to display the Program of the booking</description>
    <label>Program</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>