force-app/main/default/objects/Booking__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to Track for which Quote Booking is created</description>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>BookingsQuote</relationshipName>
    <type>Lookup</type>
</CustomField>