force-app/main/default/objects/Booking__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <description>Used to display the Sales Office to which the booking belongs.</description>
    <label>Sales Office</label>
    <length>5</length>
    <type>Text</type>
</CustomField>