force-app/main/default/objects/Booking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used to display the status of the booking</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BKN</fullName>
                <label>Booking</label>
            </value>
            <value>
                <fullName>CAX</fullName>
            </value>
            <value>
                <fullName>ERR</fullName>
                <label>Error</label>
            </value>  
            <value>
                <fullName>PRE</fullName>
                <label>Pre Application</label>
            </value>
            <value>
                <fullName>STP</fullName>
                <label>Sent To Poseidon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>