force-app/main/default/objects/Booking__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <description>Used to display the Sub Status of the booking</description>
    <label>SubStatus</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>