force-app/main/default/objects/Booking__c/fields/TravelAgain__c.field-meta.xml
<CustomField>
    <fullName>TravelAgain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to verify after the booking, whether the customer is interested to travel again</description>
    <label>Travel Again</label>
    <type>Checkbox</type>
</CustomField>