force-app/main/default/objects/Booking__c/fields/VisaStatus__c.field-meta.xml
<CustomField>
    <fullName>VisaStatus__c</fullName>
    <description>Used to display the Visa Status of the customer</description>
    <label>Visa Status</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>