force-app/main/default/objects/Booking__c/fields/VisaSubStatus__c.field-meta.xml
<CustomField>
    <fullName>VisaSubStatus__c</fullName>
    <description>Used to display the Sub Status of the Visa for Customer</description>
    <label>Visa SubStatus</label>
    <length>25</length>
    <type>Text</type>
</CustomField>